BNF.txt
<program> ::= <statements> "EOF"

<statements> ::= <statement> <statements>
              | ""

<statement> ::= <function_def>
              | <if_statement>
              | <expression>

<function_def> ::= "Defunc" "{" "name" ":" <identifier> "," "arguments" ":" <parameters> "}" <expression>

<parameters> ::= "(" <parameter_list> ")"

<parameter_list> ::= <identifier> "," <parameter_list>
                  | ""

<if_statement> ::= "if" "(" <expression> ")" "{" <expression> "}" "else" "{" <expression> "}"

<expression> ::= <unary_expression>
               | <binary_expression>
               | <literal>
               | <identifier>
               | <function_call>
               | <lambda_expression>
               | "(" <expression> ")"

<unary_expression> ::= "!" <expression>

<binary_expression> ::= <expression> <operator> <expression>

<operator> ::= "+" | "-" | "*" | "/" | "%"
             | "&&" | "||"
             | "==" | "!=" | ">=" | "<=" | ">" | "<"

<lambda_expression> ::= "(" "Lambd" <identifier> "." <expression> ")"

<function_call> ::= <identifier> "(" <arguments> ")"
                 | <lambda_expression> "(" <arguments> ")"

<arguments> ::= <expression> <argument_tail>
             | ""

<argument_tail> ::= "," <expression> <argument_tail>
                 | ""

<literal> ::= <integer>
            | <boolean>

<identifier> ::= <LETTER>

<LETTER> ::= [a-zA-Z_][a-zA-Z_0-9]*

<integer> ::= [-]?[0-9]+

<boolean> ::= "True" | "False"

<EOF> ::= "EOF"
